<resources>
    <string name="app_name">ExamBankProject</string>
    <string name="title_login">Login</string>
    <string name="button_login">Login</string>
    <string name="button_create_new_account">Create new account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="error_required">Required.</string>
    <string name="title_create_account">Create new account</string>
    <string name="button_create_account">Create account</string>
    <string name="button_login_existing_account">Login with existing account</string>
    <string name="title_verify_with_nemid">Verify with nemid</string>
    <string name="txt_write_value_for_key">Write value for key:</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_authentication_failed">Authentication failed.</string>
    <string name="title_nemid">NemId</string>
    <string name="txt_nemid_key">Write the value for key</string>
    <string name="button_back_to_login">Back to login</string>
    <string name="hint_value">Value</string>
    <string name="title_activity_my_account">MyAccount</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="menu_logout">Logout</string>
    <string name="title_settings">Settings</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_contact">Contact</string>
    <string name="valuta_dkk">kr.</string>
    <string name="title_make_transaction">Make a transaction</string>
    <string name="button_to_self">Transfer to yourself</string>
    <string name="button_transfer_to_other">Transfer to others</string>
    <string name="button_pay_bill">Pay bill</string>
    <string name="title_from">From account</string>
    <string name="title_to">To account</string>
    <string name="button_transfer_self">Transfer</string>
    <string name="title_amount">Amount</string>
    <string name="title_reg_number">Registration number</string>
    <string name="title_account_number">Account number</string>
    <string name="hint_number">1234</string>
    <string name="hint_dkk">DKK</string>
    <string name="title_pay_bill">Pay bill</string>
    <string name="title_bill_type">Bill type</string>
    <string name="hint_71">+71</string>
    <string name="title_pay_id">Payment id</string>
    <string name="hint_payid">Payment id</string>
    <string name="hint_creditor">Creditor</string>
    <string name="title_creditor">Creditor</string>
    <string name="button_pay">Pay bill</string>
    <string name="title_pay_date">Pay date</string>
    <string name="button_pick_date">Pick date</string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_adress">Adress</string>
    <string name="hint_zipcode">Zipcode</string>
    <string name="hint_city">City</string>
    <string name="hint_cpr">Birthday: ddmmyyyy</string>
    <string name="dialog_creating_user">Creating user...</string>
    <string name="button_reset_pwd">Reset password</string>
    <string name="title_reset_pwd">Reset password</string>
    <string name="button_reset">Reset</string>
</resources>
