<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/overview_icon_dark"
            android:title="@string/menu_overview" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/transfer_icon_dark"
            android:title="@string/menu_transaction" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_contact" />
        </menu>
    </item>

    <item android:title="@string/title_settings">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_icon_dark"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
