<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:dividerPadding="10dp"
    android:gravity="center|top"
    android:orientation="vertical"
    android:showDividers="middle">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/title_from"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/self_spinner_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/title_to"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/self_spinner_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/title_amount"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/self_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <Button
        android:id="@+id/self_button_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_transfer_self" />

</LinearLayout>
